<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="ru.droidcat.inventarization.database.Item" />

        <variable
            name="codeBitmap"
            type="android.graphics.Bitmap" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/add_item_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="W, 9:16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="16dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/color_control_light"
                app:cardBackgroundColor="@color/secondary_900"
                app:cardElevation="0dp">

                <androidx.camera.view.PreviewView
                    android:id="@+id/view_finder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/overlay">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="@color/camera_scrim" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/secondary_50"
                        android:textAppearance="@style/TextAppearance.Inventarization.Subtitle1"
                        android:text="@string/scanner_help_text"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/code_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/secondary_50"
                    android:padding="16dp"
                    android:visibility="invisible"
                    android:contentDescription="@string/code_viewer_content_description"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_id_textinputlayout"
                android:hint="@string/item_id_input_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card"
                android:layout_marginTop="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_id_textinputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{item.item_id}"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textAppearance="@style/TextAppearance.Inventarization.Subtitle1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_name_textinputlayout"
                android:hint="@string/item_name_input_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/item_id_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name_textinputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textAutoCorrect|textCapSentences"
                    android:text="@{item.item_name}"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textAppearance="@style/TextAppearance.Inventarization.Subtitle1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_count_textinputlayout"
                android:hint="@string/item_quantity_input_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/item_name_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_count_textinputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:itemCount="@{item}"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:textAppearance="@style/TextAppearance.Inventarization.Subtitle1" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_item_button"
            android:text="@string/add_item_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>